--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <form action="upload.php" method="post" enctype="multipart/form-data">
     <label for="fileToUpload">Scegli il file</label>
     <input type="file" name="fileToUpload" id="fileToUpload">
-    <input type="submit" value="Upload Image" name="submit">
+    <input type="submit" value="Save file" name="submit">
 </form>
 
 </body>
